--- a/static/vd.html
+++ b/static/vd.html
@@ -86,7 +86,7 @@
         // XXX TODO: Switch to wss
         // XXX TODO: Switch to our own server endpoint
         // XXX TODO: Ensure the server does Origin checking and eventually authn/authz
-        return new WebSocket(`containers/${this.id}/attach/ws?logs=1&stream=1&stdin=1&stdout=1&stderr=1`);
+        return new WebSocket(`ws://localhost:8080/v1.40/containers/${this.id}/attach/ws?logs=1&stream=1&stdin=1&stdout=1&stderr=1`);
       }
     }
 
