--- a/vd.html
+++ b/vd.html
@@ -4,6 +4,7 @@
   <title>VisiData Cloud</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="vendor/xterm.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap">
   <style>
     body {
       display: flex;
@@ -38,6 +39,7 @@
       const level = msg.match(/(^|\b)failed(\b|$)/)
         ? "error"
         : "debug";
+      // XXX TODO include ...State
       console[level]({...data, msg: `frontend.${msg}`});
     }
 
@@ -92,14 +94,45 @@
 
       attachSocket() {
         // XXX TODO: Switch to wss
-        // XXX TODO: Switch to our own server endpoint
-        // XXX TODO: Ensure the server does Origin checking and eventually authn/authz
         const url = new URL(`containers/${this.id}/attach/ws?logs=1&stream=1&stdin=1&stdout=1&stderr=1`, document.location);
         url.protocol = "ws";
 
+        log("socket.opening", {container: this.id, url});
         return new WebSocket(url);
       }
     }
+
+    class UrlState {
+      static get(_, key) {
+        return this.query.get(key);
+      }
+
+      static has(_, key) {
+        return this.query.has(key);
+      }
+
+      static deleteProperty(_, key) {
+        const query = this.query;
+        query.delete(key);
+        this.query = query;
+      }
+
+      static set(_, key, value) {
+        const query = this.query;
+        query.set(key, value);
+        this.query = query;
+      }
+
+      static get query() {
+        return (new URL(document.location)).searchParams;
+      }
+
+      static set query(query) {
+        history.replaceState(null, "", `?${query.toString()}`);
+      }
+    }
+
+    const State = new Proxy(new Map(), UrlState);
 
     /****/
 
@@ -109,46 +142,49 @@
     async function launch() {
       log("launch");
 
-      const term = new Terminal();
+      const term = new Terminal({
+        fontFamily: "'IBM Plex Mono', monospace",
+      });
+      term.open(document.getElementById("terminal"));
+      term.focus();
+      term.onTitleChange(title => {
+        log("title-changed", {title});
+        document.title = title;
+      });
 
       const fitAddon = new FitAddon.FitAddon();
       term.loadAddon(fitAddon);
-
-      term.open(document.getElementById("terminal"));
       fitAddon.fit();
 
       window.addEventListener("resize", debounce(200, () => fitAddon.fit()));
 
       /****/
 
-      const existingContainerId = (new URL(document.location)).searchParams.get("container");
-
-      if (existingContainerId && !existingContainerId.match(/^[a-zA-Z0-9_-]+$/))
+      if (State.container && !State.container.match(/^[a-zA-Z0-9_-]+$/))
         throw "container query parameter contains unpermitted characters";
 
       let container;
 
-      if (existingContainerId) {
-        log("launch.existing", {container: existingContainerId});
-        container = new Container(existingContainerId);
+      if (State.container) {
+        log("launch.existing", {container: State.container});
+        container = new Container(State.container);
       } else {
         log("launch.new");
         container = await Container.create();
         await container.start();
       }
 
-      history.replaceState(null, "", `?${queryString({container: container.id})}`);
+      State.container = container.id;
 
       term.onResize(debounce(200, ({cols, rows}) => container.resizeTty(cols, rows)));
       container.resizeTty(term.cols, term.rows);
 
-      log("launch.attaching", {container: container.id});
-
+      log("socket.attaching", {container: container.id});
       const socket = container.attachSocket();
 
-      socket.addEventListener("error", event => {
-        log("launch.attach-failed", {container: container.id});
-        term.write("Failed to attach to container.");
+      socket.addEventListener("close", close => {
+        log("socket.closed", {container: container.id, code: close.code});
+        term.writeln(`\r\n\r\nNO CARRIER`);
       });
 
       const attachAddon = new AttachAddon.AttachAddon(socket);
