--- a/frontend/vd.html
+++ b/frontend/vd.html
@@ -4,7 +4,7 @@
   <title>VisiData Cloud</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap">
-  <link rel="stylesheet" href="assets/vendor/xterm.css">
+  <link rel="stylesheet" href="vendor/xterm.css">
   <style>
     body {
       display: flex;
@@ -20,9 +20,9 @@
 </head>
 <body>
   <div id="terminal"></div>
-  <script src="assets/vendor/xterm.js"></script>
-  <script src="assets/vendor/xterm-addon-attach.js"></script>
-  <script src="assets/vendor/xterm-addon-fit.js"></script>
-  <script src="assets/vd.js" type="module"></script>
+  <script src="vendor/xterm.js"></script>
+  <script src="vendor/xterm-addon-attach.js"></script>
+  <script src="vendor/xterm-addon-fit.js"></script>
+  <script src="vd.js" type="module"></script>
 </body>
 </html>
