--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,16 +3,11 @@
 <head>
   <title>VisiData Cloud</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap">
+  <link rel="stylesheet" href="app.css">
   <style>
-    html {
-      --primary-color: hsl(180, 75%, 55%);
-      --bg-color: black;
-    }
     body {
-      font-family: 'IBM Plex Mono', monospace;
-      background: var(--bg-color);
       color: var(--primary-color);
+      background: var(--bg-color);
       margin: 0;
       padding: 2em;
     }
