--- a/frontend/vd.html
+++ b/frontend/vd.html
@@ -3,7 +3,7 @@
 <head>
   <title>VisiData Cloud</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap">
+  <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="vendor/xterm.css">
   <style>
     body {
