--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <title>VisiData Cloud</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i&display=fallback&subset=latin-ext">
   <style>
     body {
       color: var(--primary-color);
