--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
 
   <ul>
     <li>Access from any device
-    <li><i>To come: Live sharing of sessions</i>
+    <li>Live sharing of sessions
     <li><i>To come: Drag-and-drop local files</i>
     <li><i>To come: Clipboard integration</i>
     <li><i>To come: Persistent sessions</i>
