--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,10 +46,13 @@
 
   <ul>
     <li>Access from any device
-    <li>Live sharing of sessions
-    <li><i>To come: Drag-and-drop local files</i>
-    <li><i>To come: Clipboard integration</i>
-    <li><i>To come: Persistent sessions</i>
+    <li>Sessions persist until you quit VisiData
+    <li>Live sharing of sessions by sharing the link
+    <li><i>To come? Drag-and-drop local files</i>
+    <li><i>To come? Clipboard integration</i>
+    <li><i>To come? View-only sharing of sessions</i>
+    <li><i>To come? Recorded sessions</i>
+    <li><i>To come? Suspend/resume of sessions (mostly for administrative purposes)</i>
   </ul>
 
   <p><a href="vd" class="launch">Launch VisiData</a>
